--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,14 @@
-REACT_APP_BASE_API_URL="http://localhost:5000/api"
+REACT_APP_BASE_API_URL=http://localhost:5000/api
+REACT_APP_SLACK_URL=https://0c98-95-71-178-14.ngrok-free.app
+REACT_APP_WRITTEN_OFF_TIME=/writtenofftime# Обновление списаний по переработки и недоработки за месяц
+REACT_APP_UNDERWORKING=/underworking# Создание недоработки за опр дату
+REACT_APP_REWORKING=/reworking# Создание переработки за опр дату
+REACT_APP_WORKING_HOURS=/workinghours# Создание,редактирование времени работы за определенную дату
+REACT_APP_WORKING_HOURS_DELETE=/workinghours/delete# Удаление времени работы за определенную дату
+REACT_APP_LOGIN=/accountdata/login# Авторизация
+REACT_APP_AUTH=/accountdata/auth# Проверка авторизован или нет
+REACT_APP_REG=/accountdata/registration# Регистрация
+REACT_APP_USER=/user# Поиск данных юзера
+REACT_APP_OTCHET=/otchet# Запрос отчета
+REACT_APP_CALENDAR=/calendar# Запрос имеющихся каледнарей
+REACT_APP_DEPARTAMENT=/department# Получение отделов
