--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,97 @@
+PORT = 5000
 SECRET_KEY=random_secret_key123
 DB_CONNECTION='postgresql://helen2003:qR1v3IGTuwbD@ep-jolly-tooth-33469091.eu-central-1.aws.neon.tech/slack'
+
+TIME_WORKING_HOURS_8 = '08:00:00'
+TIME_WORKING_HOURS_9 = '09:00:00'
+TIME_WORKING_HOURS_START = '09:00:00'
+TIME_WORKING_HOURS_END = '18:00:00'
+TIME_LUNCH_TIME_START = '13:00:00'
+TIME_LUNCH_TIME_END = '14:00:00'
+
+
+DB_SERVER_APP_API = '/api'
+
+DB_SERVER_ACCOUNT_DATA = '/accountdata'
+ACCOUNT_DATA_REGISTRATION = '/registration'
+ACCOUNT_DATA_LOGIN = '/login'
+ACCOUNT_DATA_AUTH = '/auth'
+
+DB_SERVER_CALENDAR = '/calendar'
+CALENDAR_POST = '/'
+CALENDAR_PUT = '/'
+
+DB_SERVER_DATA_TYPE = '/datatype'
+DATA_TYPE_POST = '/'
+DATA_TYPE_PUT = '/:id_data_type'
+DATA_TYPE_DELETE = '/:id_data_type'
+
+DB_SERVER_DEPARTMENT = '/department'
+DEPARTMENT_POST = '/'
+DEPARTMENT_GET = '/'
+DEPARTMENT_PUT = '/:id_department'
+DEPARTMENT_DELETE = '/:id_department'
+
+DB_SERVER_MESSAGE = '/message'
+MESSAGE_POST = '/'
+MESSAGE_UPDATE = '/update'
+MESSADE_DELETE = '/delete'
+
+DB_SERVER_MESSAGE_TYPE = '/messagetype'
+MESSAGE_TYPE_POST = '/'
+MESSAGE_TYPE_PUT = '/:id_message_type'
+MESSAGE_TYPE_DELETE = '/:id_message_type'
+
+DB_SERVER_REWORKINGS_MONTH = '/reworkingmonth'
+REWORKINGS_MONTH_POST = '/'
+REWORKINGS_MONTH_PUT = '/:id_reworking_month'
+
+DB_SERVER_REWORKINGS = '/reworking'
+REWORKINGS_POST = '/'
+
+DB_SERVER_TYPE_OF_WORK = '/typeofwork'
+TYPE_OF_WORK_POST = '/'
+TYPE_OF_WORK_PUT = '/:id_type_of_work'
+TYPE_OF_WORK_DELETE = '/:id_type_of_work'
+
+DB_SERVER_TYPE_OVER_UNDER_WORK = '/typeoverunderwork'
+TYPE_OVER_UNDER_WORK_POST = '/'
+TYPE_OVER_UNDER_WORK_PUT = '/:id_type_over_under_work'
+TYPE_OVER_UNDER_WORK_DELETE = '/:id_type_over_under_work'
+
+DB_SERVER_UNDERWORKINGS_MONTH = '/underworkingmonth'
+UNDERWORKING_MONTH_POST = '/'
+UNDERWORKING_MONTH_PUT = '/:id_underworking_month'
+
+DB_SERVER_UNDERWORKINGS = '/underworking'
+UNDERWORKING_POST = '/'
+
+DB_SERVER_USER_ROLE = '/userrole'
+USER_ROLE_POST = '/'
+USER_ROLE_PUT = '/:id_user_role'
+USER_ROLE_DELETE = '/:id_user_role'
+
+DB_SERVER_USER = '/user'
+USER_POST = '/'
+USER_GET = '/'
+USER_PUT = '/:id_user'
+USER_DELETE = '/:id_user'
+
+DB_SERVER_WORKFLOW_TIME_TYPE = '/workflowtimetype'
+WORKFLOW_TIME_TYPE_POST = '/'
+WORKFLOW_TIME_TYPE_PUT = '/:id_workflow_time_type'
+WORKFLOW_TIME_TYPE_DELETE = '/:id_workflow_time_type'
+
+DB_SERVER_WORKINGS_HOURS = '/workinghours'
+WORKING_HOURS_POST = '/'
+WORKING_HOURS_PUT = '/:year/:month/:day'
+WORKING_HOURS_DELETE = '/delete/:year/:month/:day/'
+
+DB_SERVER_WRITTEN_OFF_TIME = '/writtenofftime'
+WRITTEN_OFF_TIME_POST = '/'
+WRITTEN_OFF_TIME_GET_ALL = '/'
+WRITTEN_OFF_TIME_GET_ONE = '/:id_writing_off_time'
+WRITTEN_OFF_TIME_PUT = '/:id_writing_off_time'
+WRITTEN_OFF_TIME_DELETE = '/:id_writing_off_time'
+
+DB_SERVER_OTCHET = '/otchet'
