--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-loading": "^2.0.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
@@ -19,6 +22,7 @@
     "react-select": "^5.8.0",
     "redux": "^5.0.1",
     "sass": "^1.77.6",
+    "stream": "^0.0.3",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
