--- a/serverSlack/package.json
+++ b/serverSlack/package.json
@@ -17,6 +17,7 @@
     "@slack/web-api": "^7.3.2",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ngrok": "^5.0.0-beta.2"
   }
 }
