--- a/serverSlack/.env
+++ b/serverSlack/.env
@@ -7,7 +7,7 @@ SLACK_EVENT_TEXT_END = "end"
 SLACK_URL_UPDATE_MESSAGE = `http://localhost:5000/api/message/update`
 SLACK_URL_DELETE_MESSAGE = `http://localhost:5000/api/message/delete`
 SLACK_URL_POST_START_MESSAGE = `http://localhost:5000/api/workinghours`
-SLACK_URL_POST_END_MESSAGE = `http://localhost:5000/api/workinghours/${year}/${month}/${day}`
+SLACK_URL_POST_END_MESSAGE = `http://localhost:5000/api/workinghours/`
 SLACK_URL_POST_CURRENT_MESSAGE = `http://localhost:5000/api/message`
 SLACK_TOKEN = "xoxb-7327630759507-7341011438593-uMFxFIeUM2DXKa9k3UWuZfaG"
 SLACK_SIGNAL_SECRET = "7f3a527ea87aff28f314b15e13db3dbf"
